Office Ecpenses Changes And Checklist Screens

--- a/src/app/main/layout/layout.component.html
+++ b/src/app/main/layout/layout.component.html
@@ -352,7 +352,7 @@
                         </a>
                     </li>
                     <li class="waves-effect waves-light">
-                        <a class="treeView-item" [routerLink]="['plans']" [routerLinkActive]="['active']">
+                        <a class="treeView-item" [routerLink]="['haltReports']" [routerLinkActive]="['active']">
                             <i class="icon fa fa-university" aria-hidden="true"></i>Halt Reports
                         </a>
                     </li>
