--- a/src/app/main/layout/Check-List/pending-reports/pending-reports.component.html
+++ b/src/app/main/layout/Check-List/pending-reports/pending-reports.component.html
@@ -14,37 +14,57 @@
         <div class="col-lg-12 col-md-12">
             <div class="tile">
                 <div class="tile-body">
-                    <div class="row p-3"></div>
-                    <div class="col-sm-12 table-responsive">
-                        <table class="table table-hover text-center dataTable">
-                            <thead>
-                            <tr>
-                                <th>S.No</th>
-                                <th>Service#</th>
-                                <th>Journey Date</th>
-                                <th>Type</th>
-                                <th>From</th>
-                                <th>To</th>
-                                <th>Vehicle</th>
-                                <th>Cash/Net Income</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr *ngFor="let service of reports; let i = index">
-                                <td>{{i + 1}}</td>
-                                <td (click)="goToServiceReport(service)">{{ service.serviceNumber}}</td>
-                                <td (click)="goToServiceReport(service)">{{service.journeyDate | date}}</td>
-                                <td (click)="goToServiceReport(service)">{{service.busType}}</td>
-                                <td (click)="goToServiceReport(service)">{{service.source}}</td>
-                                <td (click)="goToServiceReport(service)">{{service.destination}}</td>
-                                <td (click)="goToServiceReport(service)">{{service.vehicleRegNumber}}</td>
-                                <td (click)="goToServiceReport(service)">{{ service.netCashIncome }}/ {{ service.netIncome }}</td>
-                            </tr>
-                            </tbody>
-                        </table>
+                    <div class="row p-3">
+                        <div class="col-sm-12">
+                            <div class="row p-3" style="align-items: center">
+                                <div class="col-sm-2">
+                                    <label> Search for Pending Reports</label>
+                                </div>
+                                <div class="col-sm-4 form-group mb-0">
+                                    <input class="form-control form-control-sm" type="text"
+                                           [(ngModel)]="Query.searchText"
+                                           placeholder="Search Text" required
+                                           (ngModelChange)="getPendingReports()"
+                                           autocomplete="false">
+                                </div>
+                                <div class="col-sm-3 offset-3 text-right p-0">
+                                    <button type="button" class="btn btn-sm btn-primary" (click)="exportExcel()">Export
+                                        Excel
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-12 table-responsive">
+                            <table class="table table-hover text-center dataTable" id="pendingReportData">
+                                <thead>
+                                <tr>
+                                    <th>S.No</th>
+                                    <th>Service#</th>
+                                    <th>Journey Date</th>
+                                    <th>Type</th>
+                                    <th>From</th>
+                                    <th>To</th>
+                                    <th>Vehicle</th>
+                                    <th>Cash/Net Income</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr *ngFor="let service of reports | searchFilter: Query.searchText ; let i = index">
+                                    <td>{{i + 1}}</td>
+                                    <td class="hov-pointer" [routerLink]="['pendingReports/serviceReport/' + service.id] || ['pendingReports/serviceForm/' + service.attrs.formId]">{{ service.serviceNumber}}</td>
+                                    <td >{{service.journeyDate | date}}</td>
+                                    <td >{{service.busType}}</td>
+                                    <td >{{service.source}}</td>
+                                    <td >{{service.destination}}</td>
+                                    <td >{{service.vehicleRegNumber}}</td>
+                                    <td >{{ service.netCashIncome }}
+                                        / {{ service.netIncome }}</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
