--- a/src/app/main/layout/Check-List/reports-to-be-reviewed/reports-to-be-reviewed.component.html
+++ b/src/app/main/layout/Check-List/reports-to-be-reviewed/reports-to-be-reviewed.component.html
@@ -15,8 +15,27 @@
             <div class="tile">
                 <div class="tile-body">
                     <div class="row p-3"></div>
+                    <div class="col-sm-12">
+                        <div class="row p-3" style="align-items: center">
+                            <div class="col-sm-2">
+                                <label> Search for Pending Reports</label>
+                            </div>
+                            <div class="col-sm-4 form-group mb-0">
+                                <input class="form-control form-control-sm" type="text"
+                                       [(ngModel)]="Query.searchText"
+                                       placeholder="Search Text" required
+                                       (ngModelChange)="getReports()"
+                                       autocomplete="false">
+                            </div>
+                            <div class="col-sm-3 offset-3 text-right p-0">
+                                <button type="button" class="btn btn-sm btn-primary" (click)="exportExcel()">Export
+                                    Excel
+                                </button>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-sm-12 table-responsive">
-                        <table class="table table-hover text-center dataTable">
+                        <table class="table table-hover text-center dataTable" id="reportToViewData">
                             <thead>
                             <tr>
                                 <th>S.No</th>
@@ -30,7 +49,7 @@
                             </tr>
                             </thead>
                             <tbody>
-                                <tr *ngFor="let service of reports; let i = index">
+                                <tr *ngFor="let service of reports | searchFilter: Query.searchText; let i = index">
                                     <td>{{i + 1}}</td>
                                     <td (click)="goToServiceReport(service)">{{ service.serviceNumber}}</td>
                                     <td (click)="goToServiceReport(service)">{{service.journeyDate | date}}</td>
