--- a/src/app/main/layout/reports/fuel-expense-reports/add-edit-fuel-expense-reports/add-edit-fuel-expense-reports.component.html
+++ b/src/app/main/layout/reports/fuel-expense-reports/add-edit-fuel-expense-reports/add-edit-fuel-expense-reports.component.html
@@ -39,7 +39,7 @@
                              </div>
                          </div>
                          <div class="col-sm-6 form-group">
-                             <label class="control-label">Service Station<span class="mandatory-field">*</span></label>
+                             <label class="control-label">Supplier<span class="mandatory-field">*</span></label>
                              <ng-select
                                         [items]="suppliers"
                                         [multiple]="false"
