Remove odo-meter reading for fuel expense

--- a/src/app/main/layout/layout.component.html
+++ b/src/app/main/layout/layout.component.html
@@ -277,7 +277,7 @@
                             <i class="icon fa fa-product-hunt" aria-hidden="true"></i>Full Trips
                         </a>
                     </li>
-                    <li class="waves-effect waves-light" *ngIf="canAccessModule('fuelExpenseReports')">
+                    <li class="waves-effect waves-light">
                         <a class="treeView-item" [routerLink]="['fuelExpenseReports/' + apiService.newDate]" [routerLinkActive]="['active']">
                             <i class="icon fa fa-users" aria-hidden="true"></i>Fuel Expense Reports
                         </a>
